--- a/styles/global.css
+++ b/styles/global.css
@@ -84,6 +84,17 @@ a {
   color: inherit;
 }
 
+a:hover {
+  color: transparent;
+  background: linear-gradient(
+    90deg,
+    var(--brand-color-secondary) 0%,
+    var(--brand-color-primary) 100%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+
 ul[role='list'] {
   list-style: none;
 }
