--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -21,6 +21,9 @@
     var(--brand-color-primary) 100%
   );
   --btn-color: var(--surface-color);
+  color: var(--btn-color);
+  -webkit-background-clip: initial;
+  background-clip: initial;
 }
 
 .btn-sm {
@@ -56,5 +59,17 @@
     background: var(--btn-bg-color);
     -webkit-background-clip: text;
     background-clip: text;
+  }
+}
+
+@media (width >= 80em) {
+  .btn-sm {
+    padding: 1.2rem 2.4rem;
+    font-size: var(--fs-base);
+  }
+
+  .btn-md {
+    padding: 1.6rem 3.2rem;
+    font-size: 1.8rem;
   }
 }
