--- a/styles/global.css
+++ b/styles/global.css
@@ -80,8 +80,9 @@ h3 {
 }
 
 a {
+  font: var(--fw-md) var(--fs-base) / 1 var(--ff-sans);
+  color: var(--text-color-secondary);
   text-decoration: none;
-  color: inherit;
 }
 
 a:hover {
