--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,6 @@
 :root {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 
   /* Colors */
   --bg-color: #09090b;
@@ -55,6 +56,7 @@ html {
 }
 
 body {
+  font-size: 1.6rem;
   background-color: var(--bg-color);
 }
 
@@ -77,6 +79,11 @@ h2 {
 
 h3 {
   font-size: var(--fs-lg);
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 a {
