--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   width: fit-content;
-  font: var(--fw-md) var(--fs-base) / 1.5rem var(--ff-sans);
+  font: var(--fw-md) var(--fs-base) / auto var(--ff-sans);
   color: var(--btn-color);
   background-color: transparent;
   background: var(--btn-bg-color);
@@ -47,7 +47,7 @@
   &::before {
     content: '';
     position: absolute;
-    inset: 0.15rem;
+    inset: 0.1rem;
     background-color: #000;
     border-radius: inherit;
   }
